# chaos

./: README.md  chaos.cabal  stack.yaml
app/: Main.hs
bench/: BenchChebychev.hs  BenchODE.hs
src/Numeric/ODE/: CKRK.hs  RK4.hs
src/Numeric/Series/: Chebychev.hs
