name:                chaos
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tkemps/chaos#readme
license:             BSD3
license-file:        LICENSE
author:              Torsten Kemps-Benedix,
maintainer:          torsten.kemps-benedix@sks-group.eu,
copyright:           2018 Torsten Kemps-Benedix,
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, vector, diagrams, diagrams-lib, diagrams-core, diagrams-svg, Chart, Chart-diagrams, transformers, repa, ghc-prim
  ghc-options:         -Odph -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -fllvm -optlo-O3
  exposed-modules:     Numeric.Series.Chebychev, Numeric.ODE.RK4

executable chaos
  hs-source-dirs:      app, src
  main-is:             Main.hs
  other-modules:       Numeric.Series.Chebychev, Numeric.ODE.RK4
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, vector, diagrams, diagrams-lib, diagrams-core, diagrams-svg, Chart, Chart-diagrams, transformers, repa
  ghc-options:         -Odph -rtsopts -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -fllvm -optlo-O3

benchmark bench-Chebychev
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src, bench
  other-modules:       Numeric.Series.Chebychev
  default-language:    Haskell2010
  main-is:             BenchChebychev.hs
  build-depends:       base >= 4.7 && < 5, vector, diagrams, diagrams-lib, diagrams-core, diagrams-svg, Chart, Chart-diagrams, transformers, repa, criterion
  ghc-options:         -Odph -rtsopts -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -fllvm -optlo-O3

benchmark bench-ODE
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src, bench
  other-modules:       Numeric.ODE.RK4,Numeric.ODE.CKRK
  default-language:    Haskell2010
  main-is:             BenchODE.hs
  build-depends:       base >= 4.7 && < 5, vector, transformers, repa, criterion
  ghc-options:         -Odph -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -fllvm -optlo-O3
